API updates
- added new /schedules/xxx/clone POST endpoint
- documented new endpoints
- applied permissions to all requiring views
- executing all tests as admin
- returning validation errors as objects instead of string
- removed dependency on jsonschema (also replaced by marshmallow)
